--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.56.0",
     "eslint-config-next": "^14.0.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.291.0",
     "next": "^14.0.1",
     "next-navigation": "^1.0.6",
@@ -63,6 +64,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "prettier": "3.2.5"
