--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-loader-spinner": "^6.1.6",
     "recharts": "^2.12.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.0",
