--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-next": "^14.2.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.368.0",
+    "moment": "^2.30.1",
     "next": "^14.1.4",
     "next-navigation": "^1.0.6",
     "next-themes": "^0.3.0",
