--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_BACKEND_URL=http://127.0.0.1:8000
+
+# UploadThing Configuration
+UPLOADTHING_SECRET=sk_live_your_secret_key_here
+UPLOADTHING_APP_ID=your_app_id_here
